# Lite-Embed

./: .gitignore  README.md  fig5_reproduce.py  llm_neighborhoods.json  main.py  precompute_neighborhood.py  pyproject.toml  run.sh
