[project]
name = "lite-embed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "clip",
    "matplotlib>=3.11.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
    "transformers>=5.12.1",
    "wandb>=0.27.2",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
